#16 Disabled right click on window chrome

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Analytics\NullTracker.cs" />
     <Compile Include="Analytics\Tracker.cs" />
     <Compile Include="Analytics\TrackerConfig.cs" />
+    <Compile Include="Behaviors\WindowDisableContextMenulBehavior.cs" />
     <Compile Include="Services\IAutoUpdateService.cs" />
     <Compile Include="DomainObjects\AutoUpdateVersionInfo.cs" />
     <Compile Include="ComponentModel\NavigationAwareBase.cs" />
