--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="cef.redist.x64" version="73.1.13" targetFramework="net461" />
   <package id="cef.redist.x86" version="73.1.13" targetFramework="net461" />
   <package id="CefSharp.Common" version="73.1.130" targetFramework="net461" />
   <package id="CefSharp.Wpf" version="73.1.130" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
   <package id="FluentWPF" version="0.7.0" targetFramework="net461" />
