--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -819,6 +819,7 @@
     <Resource Include="Images\GitHub-logo-header.png" />
     <Resource Include="Images\SplashBackground.png" />
     <Resource Include="Images\dal-icon-white.png" />
+    <Resource Include="Images\Backgrounds\background %2821%29.jpg" />
     <Content Include="Images\Wallpaper\1.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
