#45 added process management to detect when DCS is running or updating per install and set the approptiate text and status on the playbutton #18 Show window when dcs process ends

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -200,7 +200,9 @@
     <Compile Include="Analytics\TrackerConfig.cs" />
     <Compile Include="Behaviors\WindowDisableContextMenulBehavior.cs" />
     <Compile Include="Diagnostics\AdobeAcrobatHelper.cs" />
+    <Compile Include="Diagnostics\DcsProcessMonitor.cs" />
     <Compile Include="DomainObjects\SettingsProfile.cs" />
+    <Compile Include="DomainObjects\SettingsProfileType.cs" />
     <Compile Include="Extensions\ScreenExtensions.cs" />
     <Compile Include="Lua\AutoexecLuaContext.cs" />
     <Compile Include="Services\IAutoUpdateService.cs" />
