--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -205,6 +205,7 @@
     <Compile Include="DomainObjects\SettingsProfileType.cs" />
     <Compile Include="Extensions\ScreenExtensions.cs" />
     <Compile Include="Lua\AutoexecLuaContext.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="Services\IAutoUpdateService.cs" />
     <Compile Include="DomainObjects\AutoUpdateVersionInfo.cs" />
     <Compile Include="ComponentModel\NavigationAwareBase.cs" />
