--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -194,6 +194,9 @@
     <Compile Include="Analytics\Tracker.cs" />
     <Compile Include="Analytics\TrackerConfig.cs" />
     <Compile Include="ApplicationPaths.cs" />
+    <Compile Include="DomainObjects\CameraRangeSettings.cs" />
+    <Compile Include="Interaction\Behaviors\PlaceholderService.cs" />
+    <Compile Include="Interaction\Behaviors\WindowBehavior.cs" />
     <Compile Include="Interaction\Behaviors\WindowDisableContextMenulBehavior.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Diagnostics\AdobeAcrobatHelper.cs" />
@@ -421,10 +424,11 @@
     <Compile Include="Wizards\Steps\CreateProfileWizardStepView.xaml.cs">
       <DependentUpon>CreateProfileWizardStepView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Wizards\Steps\QueryViewportSetupWizardStepView.xaml.cs">
-      <DependentUpon>QueryViewportSetupWizardStepView.xaml</DependentUpon>
+    <Compile Include="Wizards\Steps\CreateProfileWizardStepViewModel.cs" />
+    <Compile Include="Wizards\Steps\FirstUseWelcomeStepView.xaml.cs">
+      <DependentUpon>FirstUseWelcomeStepView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Wizards\Steps\QueryViewportSetupWizardStepViewModel.cs" />
+    <Compile Include="Wizards\Steps\FirstUseWelcomeStepViewModel.cs" />
     <Compile Include="Models\ScreenModel.cs" />
     <Compile Include="Wizards\Steps\SelectDeviceViewportScreensStepView.xaml.cs">
       <DependentUpon>SelectDeviceViewportScreensStepView.xaml</DependentUpon>
@@ -489,6 +493,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\ComboBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\RadioButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -628,11 +636,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Wizards\Steps\InstallationsWizardStepView.xaml">
+    <Page Include="Wizards\Steps\FirstUseWelcomeStepView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Wizards\Steps\QueryViewportSetupWizardStepView.xaml">
+    <Page Include="Wizards\Steps\InstallationsWizardStepView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -897,6 +905,9 @@
     <Resource Include="Images\SplashBackground.png" />
     <Resource Include="Images\dal-icon-white.png" />
     <Resource Include="Images\Backgrounds\background %2821%29.jpg" />
+    <Resource Include="Images\MultiMonitor0.jpg" />
+    <Resource Include="Images\MultiMonitor1.png" />
+    <Resource Include="Images\vr.png" />
     <Content Include="Resources\Images\Wallpaper\1.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
