--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -15,6 +15,8 @@
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NLua" version="1.4.20" targetFramework="net461" />
+  <package id="PropertyTools" version="3.0.0" targetFramework="net461" />
+  <package id="PropertyTools.Wpf" version="3.0.0" targetFramework="net461" />
   <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
