Added the ability to move designer items with left,right,up,down when the mouse is over the item. Added F-16C support Fixed a crash when the selected dcs install no longer exists on restart. No longer showing installation drop down when only 1 install exists. Added a disclaimer to startup.

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Analytics\TrackerConfig.cs" />
     <Compile Include="ApplicationPaths.cs" />
     <Compile Include="Controls\DpiDecorator.cs" />
+    <Compile Include="Data\EnumerableCountGreaterThanOneVisibilityConverter.cs" />
     <Compile Include="DomainObjects\CameraRangeSettings.cs" />
     <Compile Include="Interaction\Behaviors\PlaceholderService.cs" />
     <Compile Include="Interaction\Behaviors\WindowBehavior.cs" />
