--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -7,6 +7,15 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <StartupObject>DCS.Alternative.Launcher.Program</StartupObject>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Version>18.0.0.0</Version>
+    <Authors>Jeff Boulanger</Authors>
+    <Company />
+    <Description>The DCS Alternative Launcher was initially created to get around the setup process of viewports in DCS in conjunction with application called Helios. The primary focus was to have the launcher make edits to stock DCS files to allow the name change of the standard viewport names (LEFT_MFCD, RIGHT_MFCD, etc) that are shared across modules so that viewports were uniquely named per module (F_18_LEFT_MFCD, A_10C_LEFT_MFCD) and no longer shared. The issue here is that the edits go away each time DCS World updates, requiring external solutions like OVGME to re-apply the edits. The process of using OVGME inherently has issues as well, for instance, if the files that were replaced are edited by Eagle Dynamics, you would wipe out those edits by using old versions of the files stored in OVGME. DCS Alternative Launcher gets around this by verifying the proper edits (single, or multiple lines of code) exist or are made to each of the files when launching DCS World from this application.</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/jeffboulanger/DCS-Alternative-Launcher</PackageProjectUrl>
+    <PackageIconUrl>https://camo.githubusercontent.com/111ec62b0f040f9418d45862933837915d658ab1/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3431353636343531323938313739343831382f3631313234323938333937383832373830322f64616c2d69636f6e2d3235362e706e67</PackageIconUrl>
+    <RepositoryUrl>https://github.com/jeffboulanger/DCS-Alternative-Launcher</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,6 +27,10 @@
     <Compile Remove="obj\**" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
     <Page Remove="obj\**" />
   </ItemGroup>
 
@@ -191,7 +204,6 @@
   <ItemGroup>
     <Folder Include="Data\Viewports\Images\HEATBLUR_F14\" />
     <Folder Include="Data\Viewports\Images\KA-50\" />
-    <Folder Include="Plugins\" />
     <Folder Include="Resources\Viewports\Images\HEATBLUR_F14\" />
     <Folder Include="Resources\Viewports\Images\KA-50\" />
     <Folder Include="Views\Manuals\Models\" />
