Fixed the auto updater Fixed inconsistencies in ViewportTemplates.json Added Description to Viewport Template Added overload to try_find_assigned_viewport to allow legacy named viewports

--- a/AutoUpdate/AutoUpdate.csproj
+++ b/AutoUpdate/AutoUpdate.csproj
@@ -16,6 +16,10 @@
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>C:\Users\fdspr\source\repos\DCS-Alternative-Launcher\DCS.Alternative.Launcher\bin\Debug\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Fonts\Prototype.ttf" />
     <None Remove="Images\Background.png" />
