--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -16,6 +16,9 @@
     <PackageIconUrl>https://camo.githubusercontent.com/111ec62b0f040f9418d45862933837915d658ab1/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3431353636343531323938313739343831382f3631313234323938333937383832373830322f64616c2d69636f6e2d3235362e706e67</PackageIconUrl>
     <RepositoryUrl>https://github.com/jeffboulanger/DCS-Alternative-Launcher</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <Product>DCS Alternative Launcher</Product>
+    <PackageId>DCS Alternative Launcher</PackageId>
+    <AssemblyName>DCS Alternative Launcher</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
