Cleanup Removed Viewport plugin from settings

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -262,6 +262,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\KnownModules.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Lua\entry_definitions.lua">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Lua\IO.lua">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
