--- a/DCS.Alternative.Launcher.Plugin.Viewports/DCS.Alternative.Launcher.Plugin.Viewports.csproj
+++ b/DCS.Alternative.Launcher.Plugin.Viewports/DCS.Alternative.Launcher.Plugin.Viewports.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
